# minerva

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_ANALYSIS.md  COMMAND_PARAMS_ANALYSIS.md  CONFIGURATION_GUIDE.md  EDITABLE_PACKAGES_GUIDE.md  LICENSE  QWEN_QUICK_START.md  QWEN_TEST_GUIDE.md  README.md  ai-provider-abstraction-analysis.md  config.json.example  package-lock.json  pytest.ini  requirements.txt  setup.py  test-qwen-mcp-chat.py  test-qwen-tools.py
.claude/: settings.local.json
bear-notes-cag-data-creator/: README.md  __init__.py  chunk_creator.py  embedding.py  embeddings_creator.py  full_pipeline.py  models.py  setup.py  storage.py
bear-notes-extractor/: __init__.py  cli.py  setup.py
bear-notes-parser/: CLAUDE.md  README.md  __init__.py  bear_parser.py  prd-bear-notes-parser.md  setup.py
configs/: README.md  desktop-lmstudio.json  example-gemini.json  example-ollama.json  example-openai.json  hybrid-ollama-lmstudio.json  server-ollama.json
deployment/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: CHAT_GUIDE.md  CODEBASE_ANALYSIS.md  COMMAND_PARAMS_ANALYSIS.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_PATTERNS.md  DOCUMENTATION_VERIFICATION_REPORT.md  EXTRACTOR_GUIDE.md  LMSTUDIO_SETUP.md  MIGRATE_TO_MINERVA_KB.md  MINERVA_COMMON.md  MINERVA_DOC_GUIDE.md  MINERVA_KB_EXAMPLES.md  MINERVA_KB_GUIDE.md  NOTE_SCHEMA.md  RELEASE_NOTES_v2.0.md  UPGRADE_v2.0.md  configuration.md  how to publish this repository online.md  local-watcher.md
tools/minerva-doc/: E2E_TESTING.md  INTEGRATION_TESTING_CHECKLIST.md  README.md  TEST_SUITE_SUMMARY.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
tools/minerva-doc/src/minerva_doc/: __init__.py  cli.py  constants.py
tools/minerva-doc/src/minerva_doc/commands/: __init__.py  add.py  list.py  remove.py  serve.py  status.py  update.py
tools/minerva-doc/src/minerva_doc/utils/: __init__.py  init.py
tools/minerva-doc/tests/: __init__.py  test_add_command.py  test_init.py
tools/minerva-kb/: README.md  build-pyz.sh  clean.sh  install.sh  pyproject.toml  uninstall.sh
tools/minerva-kb/docs/: DEPLOY.md
tools/minerva-kb/src/minerva_kb/: cli.py  constants.py
tools/minerva-kb/src/minerva_kb/commands/: __init__.py  add.py  list.py  remove.py  serve.py  status.py  sync.py  watch.py
tools/minerva-kb/src/minerva_kb/utils/: chromadb_query.py  collection_naming.py  config_helpers.py  config_loader.py  description_generator.py  description_generator_repo.py  display.py  process_manager.py  provider_selection.py
tools/minerva-kb/tests/: conftest.py  test_add_command_integration.py  test_collection_naming.py  test_config_loader.py  test_e2e_workflow.py  test_list_command_integration.py  test_process_manager.py  test_provider_selection.py  test_remove_command_integration.py  test_status_command_integration.py  test_sync_command_integration.py  test_watch_command_integration.py
(+399 files in other folders)
