[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minerva-doc"
version = "1.0.0"
description = "Orchestrator for managing document-based knowledge base collections in Minerva"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michele Riva", email = "michele@riva.dev"}
]
keywords = ["knowledge-base", "ai", "rag", "embeddings", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# minerva-common is NOT listed here - it's injected via pipx inject
# See install.sh for the injection command
dependencies = [
    "chromadb>=0.5.23",
    "langchain-text-splitters>=0.3.4",
    "openai>=1.59.7",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.3",
]

[project.scripts]
minerva-doc = "minerva_doc.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/minerva"
Repository = "https://github.com/yourusername/minerva"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["minerva_doc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["minerva_doc"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
